{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 18,
  "lineage": "65112759-b049-2bf0-d83c-6f88e0699d27",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "dev_testing_vpc",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "mtu": 0,
            "name": "dev-testing-vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1884164574891459146",
            "project": "base-gcp-421210",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1"
          }
        },
        {
          "index_key": "operations_vpc",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/base-gcp-421210/global/networks/operations-vpc1",
            "mtu": 0,
            "name": "operations-vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8097101245506372170",
            "project": "base-gcp-421210",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"dev_testing_vpc\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "aks_subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-12T21:59:30.535-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/base-gcp-421210/regions/us-central1/routers/aks-router1",
            "name": "aks-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "project": "base-gcp-421210",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/routers/aks-router1"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"dev_testing_vpc\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "aks_subnet",
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "base-gcp-421210/us-central1/aks-router1/aks-nat1",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "aks-nat1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "base-gcp-421210",
            "region": "us-central1",
            "router": "aks-router1",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/base-gcp-421210/regions/us-central1/subnetworks/aks-subnet1",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_router.router",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"dev_testing_vpc\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "aks_subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-12T21:59:30.675-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/aks-subnet1",
            "ip_cidr_range": "10.2.0.0/24",
            "name": "aks-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/aks-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "postgres_subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-12T21:59:30.703-07:00",
            "gateway_address": "10.2.2.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/postgres-subnet1",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "postgres-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/postgres-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "sql_subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-12T21:59:30.603-07:00",
            "gateway_address": "10.2.1.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/sql-subnet1",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "sql-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/sql-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"dev_testing_vpc\"].module.firewalls[\"aks_subnet\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "firewall_Egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.557-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.1.0.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/aks-egress1",
            "log_config": [],
            "name": "aks-egress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/aks-egress1",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        },
        {
          "index_key": "firewall_Ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.569-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/aks-ingress1",
            "log_config": [],
            "name": "aks-ingress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/aks-ingress1",
            "source_ranges": [
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"dev_testing_vpc\"].module.firewalls[\"sql_subnet\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "firewall_Egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.574-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.1.1.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/sql-egress1",
            "log_config": [],
            "name": "sql-egress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/sql-egress1",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        },
        {
          "index_key": "firewall_Ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.662-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/sql-ingress1",
            "log_config": [],
            "name": "sql-ingress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/dev-testing-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/sql-ingress1",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"operations_vpc\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "gateway_subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-12T21:59:30.609-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/gateway-subnet1",
            "ip_cidr_range": "10.3.0.0/28",
            "name": "gateway-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/gateway-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "jumphost_subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-12T21:59:29.563-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/jumphost-subnet1",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "jumphost-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/jumphost-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"operations_vpc\"].module.firewalls[\"gateway_subnet\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "firewall_Egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.618-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/gateway-egress1",
            "log_config": [],
            "name": "gateway-egress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/gateway-egress1",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        },
        {
          "index_key": "firewall_Ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.668-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/gateway-ingress1",
            "log_config": [],
            "name": "gateway-ingress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/gateway-ingress1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets[\"operations_vpc\"].module.firewalls[\"jumphost_subnet\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "firewall_Egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.554-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/jumphost-egress1",
            "log_config": [],
            "name": "jumphost-egress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/jumphost-egress1",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        },
        {
          "index_key": "firewall_Ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-06-12T21:59:45.589-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/jumphost-ingress1",
            "log_config": [],
            "name": "jumphost-ingress1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/operations-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/jumphost-ingress1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.module.subnets.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    }
  ]
}